--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/GithubPages.loader.js";
+      var loaderUrl = buildUrl + "/gerald.loader.js";
       var config = {
-        dataUrl: buildUrl + "/GithubPages.data.unityweb",
-        frameworkUrl: buildUrl + "/GithubPages.framework.js.unityweb",
-        codeUrl: buildUrl + "/GithubPages.wasm.unityweb",
+        dataUrl: buildUrl + "/gerald.data.unityweb",
+        frameworkUrl: buildUrl + "/gerald.framework.js.unityweb",
+        codeUrl: buildUrl + "/gerald.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "LABORARE Arts",
         productName: "Au Rendez-vous des vivant-es",
